[gd_scene load_steps=2 format=1]

[ext_resource path="res://make.gd" type="Script" id=1]

[node name="make" type="Node2D"]

script/script = ExtResource( 1 )

[node name="Button" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 93.0
margin/top = 93.0
margin/right = 161.0
margin/bottom = 113.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "make dir"
flat = false

[node name="Button3" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 240.0
margin/top = 91.0
margin/right = 308.0
margin/bottom = 111.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "memory internal"
flat = false

[node name="Button4" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 400.0
margin/top = 91.0
margin/right = 519.0
margin/bottom = 111.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "memory sdcard"
flat = false

[node name="Button1" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 94.0
margin/top = 175.0
margin/right = 162.0
margin/bottom = 195.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "lihat dir"
flat = false

[node name="Button2" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 84.0
margin/top = 347.0
margin/right = 152.0
margin/bottom = 367.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "EXIT"
flat = false

[node name="ColorFrame" type="ColorFrame" parent="."]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 171.0
margin/top = 355.0
margin/right = 570.0
margin/bottom = 512.0
color = Color( 0.0224304, 0.410156, 0.319283, 1 )

[node name="Label" type="Label" parent="ColorFrame"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 35.0
margin/top = 31.0
margin/right = 108.0
margin/bottom = 55.0
text = "folder done"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="ok" type="Button" parent="ColorFrame"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 289.0
margin/top = 115.0
margin/right = 381.0
margin/bottom = 144.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "ok"
flat = false

[node name="FileDialog" type="FileDialog" parent="."]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 234.0
margin/top = 105.0
margin/right = 652.0
margin/bottom = 467.0
popup/exclusive = false
window/title = "Open a Directory"
dialog/hide_on_ok = false
mode = 2
access = 2
filters = StringArray(  )
show_hidden_files = false

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]

[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]

[connection signal="pressed" from="Button4" to="." method="_on_Button4_pressed"]

[connection signal="pressed" from="Button1" to="." method="_on_Button1_pressed"]

[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]

[connection signal="pressed" from="ColorFrame/ok" to="." method="_on_ok_pressed"]

[connection signal="confirmed" from="FileDialog" to="." method="_on_FileDialog_confirmed"]


